--- a/index.html
+++ b/index.html
@@ -123,93 +123,107 @@
         <!-- carousel end. -->
 
         <section class="container">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-1.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="d-flex">
+                <div class="card mb-3 me-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="course-1.png" class="img-fluid w-100 rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-2.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <div class="card mb-3 me-e" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="course-2.png" class="img-fluid w-100 rounded-start" alt="...">
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-3.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-4.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-5.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="course-6.png" class="img-fluid rounded-start" alt="...">
+            <div class="d-flex">
+                <div class="card mb-3  me-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="course-3.png" class="img-fluid w-100 rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+                <div class="card mb-3  me-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="course-4.png" class="img-fluid w-100 rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex">
+                <div class="card mb-3  me-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 col-sm-12 col-12 col-lg-4">
+                            <img src="course-5.png" class="img-fluid w-100 rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3  me-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4 col-12 col-sm-12 col-lg-4">
+                            <img src="course-6.png" class="img-fluid w-100 rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural
+                                    lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -243,42 +257,48 @@
         </section> <br> <br>
         <!-- course iteam end -->
         <section class="container">
-            <div class="d-flex">
-                <div class="col-lg-5 col-md-5 col-sm-12 col-12">
-                    <img class="img-fluid" src="working.png" alt="">
-
-                </div>
-
-                <div class="col-lg-7 col-md-7 col-sm-12 col-12 bg-light">
-                    <h1 class="ms-5">Explore The elearning <br> Institute</h1>
-                    <p class="ms-5">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or
-                        randomised words which don't look even slightly believable. If you are going
-                        to use a passage of Lorem Ipsum, you need to be sure</p>
-
-
-                    <p class="ms-5">Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
-                        generators on the Internet tend to repeat predefined.</p>
-                    <div class="ms-5 d-flex">
-                        <div>
-                            <h1>3.2k+</h1><br>
-                            <h5 class="text-info">Online course</h5>
-                        </div>
-
-                        <div class="ms-5">
-
-                            <h1>600$</h1><br>
-                            <h5 class="text-info"> Expert member</h5>
-                        </div>
-
-                        <div class="ms-5">
-                            <h1>100$</h1><br>
-                            <h5 class="text-info">ratiing & review</h5>
-                        </div>
+            <div clas="col-lg-4 col-md-4 col-12 col-sm-12">
+                <div class="d-flex">
+                    <div class="col-lg-5">
+                        <img class="img-fluid" src="working.png" alt="">
 
                     </div>
-                </div>
 
+                    <div class="col-lg-7  bg-light">
+                        <h1 class="ms-5">Explore The elearning <br> Institute</h1>
+                        <p class="ms-5 ">There are many variations of passages of Lorem
+                            Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or
+                            randomised words which don't look even slightly believable. If you are going
+                            to use a passage of Lorem Ipsum, you need to be sure</p>
+
+
+                        <p class="ms-5">Anything embarrassing hidden in the middle of
+                            text. All the Lorem Ipsum
+                            generators on the Internet tend to repeat predefined.</p>
+                        <div class="ms-5 d-flex">
+                            <div>
+                                <h2>3.2k+</h2>
+                                <h6>
+                                    <h2 class="text-info">Online course
+                                </h6>
+                            </div>
+
+                            <div class="ms-3">
+
+                                <h2>600$</h2><br>
+                                <h6 class="text-info"> Expert member</h6>
+                            </div>
+
+                            <div class="ms-3">
+                                <h2>100$</h12<br>
+                                    <h6 class="text-info">ratiing & review</h6>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </section><br><br>
         <section class="container">
@@ -288,7 +308,7 @@
                     <p>It is a long established fact that a reader will be distracted by the <br>
                         readable content of a page when looking at its layout</p>
                 </div>
-                <div class="col-5 mt-10">
+                <div class="col-3 mt-10">
                     <button class="btn btn-success mt-3 ">Register Now </button>
                 </div>
             </div>
@@ -447,13 +467,55 @@
         </section><br> <br>
         <!-- footer start  -->
         <section class="container">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="height-500px w-100 bg-dark col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="text-center text-white col-lg-12 col-md-12 col-sm-12 col-12 ">
                         <h1>Peo Edu</h1>
                         <p>Office 41, Zawaya Buildin, Ghala Muscat,<br>Sultanate of Oman</p>
                         <p>Privacy Ploicy | Terms of use</p>
                     </div>
+                    <div class="icon">
+                        <img class="imgy  col-3 col-sm-3" src="youtubes.jpg" alt="">
+                        <img class="imgt  col-3 col-sm-3" src="twitters.jpg" alt="">
+                        <img class="lite  col-3 col-sm-3" src="facebook.png" alt="">
+                        <img class="insta col-3 col-sm-3" src="instagram.png" alt="">
+                    </div>
+
+                    <style>
+                        .icon {
+                            text-align: center;
+                        }
+
+                        .imgy {
+                            height: 30px;
+                            width: 30px;
+
+                            margin-left: px;
+
+
+                        }
+
+                        .imgt {
+                            height: 30px;
+                            width: 30px;
+
+                            margin-left: 2px;
+                        }
+
+                        .lite {
+                            height: 30px;
+                            width: 30px;
+
+                            margin-left: 2px;
+                        }
+
+                        .insta {
+                            height: 30px;
+                            width: 30px;
+
+                            margin-left: 2px;
+                        }
+                    </style>
                 </div>
             </div>
         </section>
