--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="container">
             <nav class="navbar navbar-expand-lg bg-light container">
                 <div class="container">
-                    <a class="navbar-brand " href="#">Pro edu</a>
+                    <a class="navbar-brand " href="#"> <strong> Pro edu</strong></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -24,19 +24,19 @@
                         <ul class="navbar-nav">
 
                             <li class="nav-item ">
-                                <a class="nav-link active " aria-current="page" href="#">Home</a>
+                                <a class="nav-link active " aria-current="page" href="#"><strong>Home</strong> </a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link" href="#">Courses</a>
+                                <a class="nav-link" href="#"><strong>Courses</strong> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Success </a>
+                                <a class="nav-link" href="#"><strong> Success</strong> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">About </a>
+                                <a class="nav-link disabled"> <strong>About</strong> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled">Register</a>
+                                <a class="nav-link disabled"><strong>Register</strong> </a>
                             </li>
                             <li class="ms-50">
                                 <nav class="navbar bg-light h-70">
@@ -67,9 +67,9 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner mb-300">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="cover-1.png" class="d-block col-lg-12 col-md-12 col-sm-12 col-12" alt="...">
-                        <div class="carousel-caption d-none d-md-block col-5 col-sm-5 col-md-8">
+                    <div class="carousel-item active " data-bs-interval="10000">
+                        <img src="cover-1.png" class="d-block w-100 h-100 " alt="...">
+                        <div class="carousel-caption d-none d-md-block">
                             <h1 class="text-center">Get Started Digital Learning</h1>
                             <p class="">It is a long established fact that a reader will be distracted by the
                                 readable
@@ -84,7 +84,7 @@
 
                     </style>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="cover-2.jpg" class="d-block w-100" alt="...">
+                        <img src="cover-2.jpg" class="d-block w-100 h-100 " alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1>Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="cover-3.jpg" class="d-block w-100" alt="...">
+                        <img src="cover-3.jpg" class="d-block w-100 h-100 " alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h1>Get Started Digital Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
@@ -122,112 +122,125 @@
 
         <!-- carousel end. -->
 
-        <section class="container">
-            <div class="d-flex">
-                <div class="card mb-3 me-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="course-1.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <section class="container ">
+            <div class="col-12">
+                <div class="d-flex">
+                    <div class="card mb-3 me-3" style="max-width: 540px;">
+                        <div class="row g-0 col-12 col-sm-12">
+                            <div class="col-md-4 ">
+                                <img src="course-1.png" class="img-fluid w-100 h-100 rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 col-sm-12 col-12">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Desig</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card</p>
+                                    <p class="card-text"><small class="text-primary">price-20$</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 me-e" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="course-2.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+
+                <div class="col-12">
+                    <div class="card
+                     mb-3 me-e" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="course-2.png" class="img-fluid w-100 h-100 rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card.</p>
+                                    <p class="card-text"><small class="text-primary">price-20</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="d-flex">
-                <div class="card mb-3  me-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="course-3.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="col-12">
+                <div class="d-flex">
+                    <div class="card mb-3  me-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="course-3.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card</p>
+                                    <p class="card-text"><small class="text-primary">price-20</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3  me-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="course-4.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+                <div class="col-12">
+                    <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="course-4.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Digital Marketing</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card</p>
+                                    <p class="card-text"><small class="text-primary">price-20</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="d-flex">
-                <div class="card mb-3  me-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 col-sm-12 col-12 col-lg-4">
-                            <img src="course-5.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 col-12 col-sm-12 col-lg-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
+            <div class="col-12">
+                <div class="d-flex">
+                    <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 col-sm-12 col-12 col-lg-4">
+                                <img src="course-5.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Photography Basic Rules</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card</p>
+                                    <p class="card-text"><small class="text-primary">price-20</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="card mb-3  me-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4 col-12 col-sm-12 col-lg-4">
-                            <img src="course-6.png" class="img-fluid w-100 rounded-start" alt="...">
-                        </div>
-                        <div class="col-md-8 col-12 col-sm-12 col-lg-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to
-                                    additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <div class="col-12">
+                    <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4 col-12 col-sm-12 col-lg-4">
+                                <img src="course-6.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Motion Graphics</h5>
+                                    <p class="card-text">Some quick example text to build on the card title
+                                        and make up the bulk of the card</p>
+                                    <p class="card-text"><small class="text-primary">price-20$</small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
             <style>
                 .div {
 
@@ -404,7 +417,12 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            yes it's ok No problem
+                            There are many variations of passages of available, but the majority have suffered
+                            alteration in
+                            some form, by injected humour, or randomised words which don't look even slightly
+                            believable. If
+                            you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                            embarrassing hidden in the middle of text. All the generators on th
                         </div>
                     </div>
                 </div>
@@ -418,12 +436,12 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            There are many variations of passages of available, but the majority have suffered
+                            alteration in
+                            some form, by injected humour, or randomised words which don't look even slightly
+                            believable. If
+                            you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                            embarrassing hidden in the middle of text. All the generators on th
                         </div>
                     </div>
                 </div>
@@ -437,12 +455,12 @@
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            There are many variations of passages of available, but the majority have suffered
+                            alteration in
+                            some form, by injected humour, or randomised words which don't look even slightly
+                            believable. If
+                            you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                            embarrassing hidden in the middle of text. All the generators on th
                         </div>
                     </div>
                 </div>
