--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title> PRO-Edu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -124,7 +124,7 @@
 
         <section class="container ">
             <div class="col-12">
-                <div class="d-flex">
+                <div class="d-flex ">
                     <div class="card mb-3 me-3" style="max-width: 540px;">
                         <div class="row g-0 col-12 col-sm-12">
                             <div class="col-md-4 ">
@@ -143,7 +143,7 @@
                 </div>
 
 
-                <div class="col-12">
+                <div class="col-12 ">
                     <div class="card
                      mb-3 me-e" style="max-width: 540px;">
                         <div class="row g-0">
@@ -182,7 +182,7 @@
                     </div>
                 </div>
 
-                <div class="col-12">
+                <div class="col-12 ">
                     <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -199,55 +199,57 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
 
-            <div class="col-12">
-                <div class="d-flex">
-                    <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
-                        <div class="row g-0">
-                            <div class="col-md-4 col-sm-12 col-12 col-lg-4">
-                                <img src="course-5.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+
+                <div class="col-12 ">
+                    <div class="d-flex">
+                        <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-sm-12 col-12 col-lg-4">
+                                    <img src="course-5.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <p class="card-text">Some quick example text to build on the card title
+                                            and make up the bulk of the card</p>
+                                        <p class="card-text"><small class="text-primary">price-20</small></p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-8 col-12 col-sm-12 col-lg-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Photography Basic Rules</h5>
-                                    <p class="card-text">Some quick example text to build on the card title
-                                        and make up the bulk of the card</p>
-                                    <p class="card-text"><small class="text-primary">price-20</small></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
+                            <div class="row g-0">
+                                <div class="col-md-4 col-12 col-sm-12 col-lg-4">
+                                    <img src="course-6.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8 col-12 col-sm-12 col-lg-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Motion Graphics</h5>
+                                        <p class="card-text">Some quick example text to build on the card title
+                                            and make up the bulk of the card</p>
+                                        <p class="card-text"><small class="text-primary">price-20$</small></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- new -->
 
-                <div class="col-12">
-                    <div class="card mb-3  me-3 col-12" style="max-width: 540px;">
-                        <div class="row g-0">
-                            <div class="col-md-4 col-12 col-sm-12 col-lg-4">
-                                <img src="course-6.png" class="img-fluid w-100 h-100  rounded-start" alt="...">
-                            </div>
-                            <div class="col-md-8 col-12 col-sm-12 col-lg-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Motion Graphics</h5>
-                                    <p class="card-text">Some quick example text to build on the card title
-                                        and make up the bulk of the card</p>
-                                    <p class="card-text"><small class="text-primary">price-20$</small></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <!-- new ends -->
 
+                <style>
+                    .div {
 
-            <style>
-                .div {
+                        text-align: center;
 
-                    text-align: center;
-
-                }
-            </style>
+                    }
+                </style>
         </section>
         <!-- course iteam -->
         <section class="container">
